--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,24 @@
 	<name>twinkql</name>
 	<description>SPARQL with a Twist! tiwnkql A SPARQL query building tool that lets you
 	specify your SPARQL queries in XML, instead of in your code.</description>
-
+	<inceptionYear>2012</inceptionYear>
+	<licenses>
+		<license>
+			<name>Apache 2</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+			<comments>A business-friendly OSS license</comments>
+		</license>
+	</licenses>
+	<organization>
+		<name>Mayo Clinic</name>
+		<url>http://mayo.edu</url>
+	</organization>
+	<issueManagement>
+		<system>GitHub</system>
+		<url>https://github.com/cts2/twinkql/issues</url>
+	</issueManagement>
+	
 	<developers>
 		<developer>
 			<id>kevin</id>
@@ -64,7 +81,7 @@
 						</goals>
 						<configuration>
 							<options>
-								<package>edu.mayo.sparqler.model</package>
+								<package>edu.mayo.twinkql.model</package>
 							</options>
 						</configuration>
 					</execution>
@@ -123,6 +140,38 @@
 			<artifactId>groovy-all</artifactId>
 			<version>1.7.4</version>
 			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.hp.hpl.jena</groupId>
+			<artifactId>arq</artifactId>
+			<version>2.8.8</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.2.4</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.0.1</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.8.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
 		</dependency>
 	</dependencies>
 
