--- a/pom.xml
+++ b/pom.xml
@@ -69,46 +69,36 @@
 			</plugin>
 
 			<plugin>
-				<groupId>org.jibx</groupId>
-				<artifactId>jibx-maven-plugin</artifactId>
-				<version>1.2.3</version>
-
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>castor-maven-plugin</artifactId>
+				<version>2.1</version>
+				<configuration>
+					<generateImportedSchemas>true</generateImportedSchemas>
+					<verbose>true</verbose>
+					<properties>${basedir}/src/main/castor/castorbuilder.properties</properties>
+				</configuration>
 				<executions>
 					<execution>
-						<id>generate-java-code-from-schema</id>
 						<goals>
-							<goal>schema-codegen</goal>
-						</goals>
-						<configuration>
-							<options>
-								<package>edu.mayo.twinkql.model</package>
-							</options>
-							<schemaBindingDirectory>${basedir}/target/generated-sources/jibx</schemaBindingDirectory>
-						</configuration>
-					</execution>
-					<execution>
-						<id>compile-binding</id>
-						<goals>
-							<goal>bind</goal>
+							<goal>generate</goal>
 						</goals>
 					</execution>
 				</executions>
-				<configuration>
-					<schemaLocation>${basedir}/src/main/xsd</schemaLocation>
-					<includeSchemas>
-						<includeSchema>sparqlmap.xsd</includeSchema>
-					</includeSchemas>
-					<schemaBindingDirectory>${basedir}/target/generated-sources/jibx</schemaBindingDirectory>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
 
 	<dependencies>
 		<dependency>
-			<groupId>org.jibx</groupId>
-			<artifactId>jibx-run</artifactId>
-			<version>1.2.3</version>
+			<groupId>org.codehaus.castor</groupId>
+			<artifactId>castor-xml</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.codehaus.castor</groupId>
+			<artifactId>castor-codegen</artifactId>
+			<version>1.3.1</version>
 		</dependency>
 
 		<dependency>
