--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,18 @@
 			<artifactId>org.springframework.core</artifactId>
 			<version>3.1.0.RELEASE</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>org.springframework.context</artifactId>
+			<version>3.1.0.RELEASE</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>com.springsource.org.aopalliance</artifactId>
+					<groupId>org.aopalliance</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
