--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
 	</build>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.jodd</groupId>
+			<artifactId>jodd</artifactId>
+			<version>3.3.1</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.codehaus.castor</groupId>
 			<artifactId>castor-xml</artifactId>
@@ -106,7 +113,7 @@
 			<artifactId>org.springframework.core</artifactId>
 			<version>3.1.0.RELEASE</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>org.springframework.context</artifactId>
