--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
 	<scm>
 		<developerConnection>scm:git:git@github.com:cts2/twinkql.git</developerConnection>
 	</scm>
-	
+
 	<distributionManagement>
 		<repository>
 			<id>informatics-releases</id>
@@ -63,6 +63,14 @@
 	</properties>
 
 	<build>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ssh</artifactId>
+				<version>1.0-beta-6</version>
+			</extension>
+		</extensions>
+
 		<plugins>
 			<plugin>
 				<groupId>org.codehaus.gmaven</groupId>
