--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.mayo</groupId>
 	<artifactId>twinkql</artifactId>
-	<version>0.3.3</version>
+	<version>0.3.4-SNAPSHOT</version>
 	<name>twinkql</name>
 	<description>SPARQL with a Twist! tiwnkql A SPARQL query building tool that lets you
 	specify your SPARQL queries in XML, instead of in your code.</description>
